[package]
name = "filament"
description = "A quasi-workalike for the MogileFS tracker daemon."
version = "0.3.1"
authors = ["Andrew Watts <ahwatts@gmail.com>"]
homepage = "https://github.com/ahwatts/mogilefsd-rs"
build = "build.rs"

[dependencies.mogilefs_client]
path = "client"

[dependencies.mogilefs_common]
path = "common"

[dependencies.mogilefs_server]
path = "server"

[dependencies]
docopt = "~0.6.70"
env_logger = "~0.3.1"
lazy_static = "~0.1.14"
log = "~0.3.1"
rustc-serialize = "~0.3.15"
url = "~0.2.36"

[dependencies.filament-ext]
git = "ssh://git@github.com/reverbnation/filament-ext.git"

[dependencies.iron]
git = "https://github.com/ahwatts/iron.git"
branch = "bug/http_10"
default-features = false
