[package]
name = "mogilefs_client"
description = "A client library for talking to MogileFS from Rust."
version = "0.4.0"
authors = ["Andrew Watts <ahwatts@gmail.com>"]
homepage = "https://github.com/ahwatts/mogilefsd-rs"

[dependencies]
bufstream = "~0.1.0"
chrono = "~0.2.0"
hyper = "~0.6.0"
rand = "~0.3.0"
log = "~0.3.1"
statsd = "~0.4.1"
url = "~0.2.36"

[dependencies.mogilefs_common]
path = "../common"

[dev-dependencies]
lazy_static = "~0.1.14"
