[package]
name = "mogilefs_common"
description = "Common bits needed for both the MogileFS client and server libs."
version = "0.4.0-dev"
authors = ["Andrew Watts <ahwatts@gmail.com>"]
homepage = "https://github.com/ahwatts/mogilefsd-rs"

[dependencies]
hyper = "~0.6.0"
log = "~0.3.1"
rand = "~0.3.0"
url = "~0.2.36"

[dev-dependencies]
matches = "~0.1.2"
