[package]
name = "mogilefs_common"
description = "Common bits needed for both the MogileFS client and server libs."
version = "0.5.0-dev"
authors = ["Andrew Watts <ahwatts@gmail.com>"]
homepage = "https://github.com/ahwatts/mogilefsd-rs"

[dependencies]
hyper = "~0.7.0"
log = "~0.3.1"
rand = "~0.3.0"
url = "~0.5.0"

[dev-dependencies]
matches = "~0.1.2"
