[package]
name = "mogilefs_server"
description = "A quasi-workalike for the MogileFS tracker daemon."
version = "0.5.0-dev"
authors = ["Andrew Watts <ahwatts@gmail.com>"]
homepage = "https://github.com/ahwatts/mogilefsd-rs"

[dependencies]
chrono = "^0.2.0"
hyper = "^0.9.3"
lazy_static = "^0.2.1"
libc = "^0.2.2"
log = "^0.3.1"
mio = "^0.5.0"
plugin = "^0.2.0"
r2d2 = "^0.7.0"
rustc-serialize = "^0.3.15"
# statsd = "^0.4.1"
threadpool = "^1.0.0"
time = "^0.1.32"
url = "^1.1.0"

[dependencies.iron]
git = "https://github.com/ahwatts/iron.git"
branch = "bug/http_10"
default-features = false

[dependencies.mogilefs_client]
path = "../client"

[dependencies.mogilefs_common]
path = "../common"

[dependencies.statsd]
git = "https://github.com/ahwatts/rust-statsd.git"
branch = "master"

[dev-dependencies]
matches = "^0.1.2"
regex = "^0.1.8"
env_logger = "^0.3.2"
